--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 <p>Not Parked</p>
 </div>
 
+<iframe id="form" style = "visibility: hidden;"></iframe>
+
 <div class="mapbox">
 <div class="inst">
 <p>Current Location</p>
