--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Set Up Maplibre -->
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
-  
+  <script src="/js/main.js"></script>
   
   <link href="/css/main.css" rel="stylesheet" />
   <!-- Set Up Icon -->
@@ -26,9 +26,13 @@
   
 </head>
 <body style="overflow:hidden">
+ 
 
 <h1>The Big Car Count <image src="/images/icon_192.png" style="height:40px; width:40px;" alt="logo"></image></h1>
 
+<div class="success" id="success">
+  <image src="/images/tick.png" style="height:150px; width:150px;" alt="Sucesffully loaded"></image>
+</div>
 
   
 <div class="inst">
@@ -71,9 +75,9 @@
 <div id="map" class="map" style='width: 100%; height: 100px;'></div>
 </div>
 
-<div class = "menu">
-  <p><a href="/">Survey</a></p>
+<div class="menu">
   <p><a href="/about">About</a></p>
+  <p><a href="/stats">Stats</a></p>
 </div>
 
 
