--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>The Big Car Count</title>
   <!-- PWA support -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
   <meta name="apple-mobile-web-app-status-bar" content="#007dc7">
   <meta name="theme-color" content="#007dc7">
@@ -21,8 +21,8 @@
   
   <link href="/css/main.css" rel="stylesheet" />
   <!-- Set Up Icon -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
 </head>
 <body style="overflow:hidden">
