--- a/about/index.html
+++ b/about/index.html
@@ -79,6 +79,9 @@
 We can then use the data to produce aggregated statistics such as the average vehicle age or mileage in different neighbourhoods.  The individual observations will not be published and will be deleted at the end of the research project.</p>
 
 
+<h2>Attribution</h2>
+<p><a href="https://loading.io/license">icon 'ninja' from loading.io</a></p>
+
 </div>  
 
 <div class = "menu">
