--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 <div class="mapbox">
 <div class="inst">
-<p>Current Location</p>
-<p id="location">Can't find your current location</p>
+<p>Current Location:</p>
+<p id="location">Submit a number plate to start tracking</p>
 </div>
 </div>
 <script src="/js/map.js"></script>
@@ -75,6 +75,10 @@
 
 <div class="success" id="success">
   <image src="/images/tick.png" style="height:150px; width:150px;" alt="Sucesffully loaded"></image>
+</div>
+
+<div class="success" id="loading">
+  <image src="/images/spinner.svg" style="height:150px; width:150px;" alt="Submitting"></image>
 </div>
 
 </body>
