--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="Description" content="A survey of the vehicles of the UK">
   
   <title>The Big Car Count</title>
-  <!-- PWA support 
+  <!-- PWA support -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
   <meta name="apple-mobile-web-app-status-bar" content="#007dc7">
   <meta name="theme-color" content="#007dc7">
-  <script src="/app.js" defer></script> -->
+  <script src="/app.js" defer></script>
   
   <!-- Set Up Maplibre
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
