Fix layout and watch location

--- a/about/index.html
+++ b/about/index.html
@@ -84,11 +84,12 @@ We can then use the data to produce aggregated statistics such as the average ve
 
 </div>  
 
+<div class="overflowbox">
 <div class = "menu">
   <p><a href="/">Survey</a></p>
   <p><a href="/stats">Stats</a></p>
 </div>
-
+</div>
 
 
 
