--- a/stats/index.html
+++ b/stats/index.html
@@ -30,7 +30,7 @@
 
 <p>Number of observations submitted</p>
 <p><div id="count">0</div></p>
-<p>App Version 0.006</p>
+<p>App Version 0.007</p>
 
 </div>
 
@@ -38,11 +38,12 @@
   document.getElementById("count").innerHTML = getCookie("BCC_count")
 </script>
 
+<div class="overflowbox">
 <div class = "menu">
   <p><a href="/">Survey</a></p>
   <p><a href="/about">About</a></p>
 </div>
-
+</div>
 
 
 
