--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
 </head>
-<body style="overflow:hidden">
+<body>
  
 
 <h1>The Big Car Count <image src="/images/icon_192.png" style="height:40px; width:40px;" alt="logo"></image></h1>
+<div class="mainbox">
 <div class="inst">
 <p>Enter a number plate</p>
 </div>
@@ -59,11 +60,13 @@
 <p>Other</p>
 <p>Not Parked</p>
 </div>
+</div>
 
+<div class="overflowbox">
 <div class="mapbox">
 <div class="inst">
-<p>Current Location:</p>
-<p id="location">Submit a number plate to start tracking</p>
+<p><b>Current Location</b></p>
+<p id="location">Please share your location</p>
 </div>
 </div>
 <script src="/js/map.js"></script>
@@ -72,7 +75,9 @@
   <p><a href="/about">About</a></p>
   <p><a href="/stats">Stats</a></p>
 </div>
+</div>
 
+<!-- Floading Content -->
 <div class="success" id="success">
   <image src="/images/tick.png" style="height:150px; width:150px;" alt="Sucesffully loaded"></image>
 </div>
