--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="mapbox">
 <div class="inst">
 <p><b>Current Location</b></p>
-<p id="location"><button onclick="updateCoords()"> Please share your location</button></p>
+<p id="location"><button onclick="updateCoords()" style="height: 40px"> Please share your location</button></p>
 </div>
 </div>
 <script src="/js/map.js"></script>
