--- a/stats/index.html
+++ b/stats/index.html
@@ -26,7 +26,7 @@
   
 <div style="height:calc(100% - 50px); overflow:auto">
 
-<h1>The Big Car Count <image src="/images/icon_192.png" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
 
 <p>Number of observations submitted</p>
 <p><div id="count">0</div></p>
