--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
   
 <div class="content">
 
-<h1>The Big Car Count <image src="/images/icon_192.png" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
 
 <p>This app is part of the <a href="https://environment.leeds.ac.uk/dir-record/research-projects/1794/cars-connecting-administrative-vehicle-data-for-research-on-sustainable-transport">Connecting Administrative vehicle data for Research on Sustainable Transport</a> (CARS) research project.</p>
 
