--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
   <meta name="theme-color" content="#007dc7">
   <script src="/app.js" defer></script>
   
-  <!-- Set Up Maplibre
-  <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-  <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />  -->
   <script src="/js/main.js"></script>
   
   <link href="/css/main.css" rel="stylesheet" />
@@ -28,7 +25,7 @@
 <body>
  
 
-<h1>The Big Car Count <image src="/images/icon_192.png" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
 <div class="mainbox">
 <div class="inst">
 <p>Enter a number plate</p>
