no internet check

--- a/index.html
+++ b/index.html
@@ -77,12 +77,17 @@
 
 <!-- Floading Content -->
 <div class="success" id="success">
-  <image src="/images/tick.png" style="height:150px; width:150px;" alt="Sucesffully loaded"></image>
+  <image src="/images/tick.png" style="height:50px; width:50px;" alt="Sucesffully loaded"></image>
 </div>
 
 <div class="loading" id="loading">
   <image src="/images/spinner.svg" style="height:60px; width:60px;" alt="Submitting"></image>
 </div>
+
+<div class="nointernet" id="nointernet">
+  <image src="/images/nointernet.PNG" style="height:40px; width:40px;" alt="Submitting"></image>
+</div>
+
 
 </body>
 </html>
