Validate plates and additional docs

--- a/about/index.html
+++ b/about/index.html
@@ -24,60 +24,88 @@
 <body>
   
 <div class="content">
-
-<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+  
+  
+<h1>The Big Car Count? <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
 
 <p>This app is part of the <a href="https://environment.leeds.ac.uk/dir-record/research-projects/1794/cars-connecting-administrative-vehicle-data-for-research-on-sustainable-transport">Connecting Administrative vehicle data for Research on Sustainable Transport</a> (CARS) research project.</p>
+<p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.  While we know much about vehicles in the UK a crucial missing piece of information is where the "live". </p>
+<p>This app is intended to help build a crowd-sourced survey of the home locations of vehicles across the UK. Knowing a vehicle's home location enables a wide range of research for the public good.</p>
+
+<h1>Consent to participate in the survey</h1>
+<p>By submitting responses to the survey you are consenting to participate in the survey. See the <a href="/about/consent">consent form</a> for more information.
+<h2>How to use this app</h2>
+<p>You will need to give the app permission to access your location. If the app does no know your location you will see a “please share your location” button at the bottom of the survey.</p>
+<p>Type in the number plate of any parked vehicles you see and click the button that best describes where it is parked (e.g. Drive, Road, Pavement). If your observation has been successfully summited, a green tick will flash up on the right side of the yellow number plate box.</p>
 
 
-<p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.</p>
 
+<h1>What are we looking for</h1>
+<div class="infoimages">
 
-<p>While we know much about vehicles in the UK a crucial missing piece of information is where the "live".  Frustratingly, this is information the DVLA has and regularly sells to private companies such as parking enforcers and bailiffs but will not share with Universities or other government departments </p>
+<image src="/images/parkedcars.jpg"  alt="Parked Cars"></image>
 
-<p>This app is intended to help build a crowd-sourced survey of the home locations of vehicles across the UK.  Knowing a vehicle's home location enables a wide range of research for the public good.</p>
-
-
-<h2>How to use this app.</h2>
-
-<p> Type in the number plate of any parked vehicles you see and click the button that best describes where it is parked (e.g. on the road).  If your observation has been successfully summited, a green tick will flash up.</p>
-
-
-<h2>What are we looking for</h2>
-
-<p>Vehicles parked in their home locations, the place they go home to at night.  So, spotting cars on a Sunday afternoon on residential streets is useful.  Spotting cars in a supermarket car park is not useful.</p>
-
-<ul>
- <li>Parked cars/motorbikes/vans</li>
- <li>In a "home" location, e.g. drive, residential street, residential car park</li>
-</ul>
-
+<p>We are looking for cars/ motorbikes/ vans parked in their "home" locations, the place they go to at night.</p>
+<p>You can contribute in any place or time across the UK. For example Saturday or Sunday afternoon on residential street would be a good time to spot cars in their home locations.</p>
+    
+    
+</div>
 
 <h2>What are we not looking for</h2>
 
-<ul>
- <li>Moving vehicles or vehicles that have temporally stopped (e.g. at traffic lights)</li>
- <li>Vehicles parked in temporary locations, e.g. supermarket car park, office car park</li>
- <li>Busses/Coaches/Trucks/Diggers</li>
- <li>Service vehicles e.g. police cars/ambulances</li>
- <li>Taxis</li>
-</ul>
+<div class="infoimages">
+
+<image src="/images/movingcars.jpg" alt="Moving Cars"></image>
+
+<p>Moving vehicles or vehicles that have temporally stopped (e.g. at traffic lights)</p>
+
+</div>
+
+<div class="infoimages">
+
+<image src="/images/supermarket.jpg" alt="Supermarket car park"></image>
+
+<p>Vehicles parked in temporary locations, e.g. supermarket car park, office car park, outside a school at pickup time.</p>
+
+</div>
+
+<div class="infoimages">
+
+<image src="/images/servicevehicles.jpg" alt="Service vehicles"></image>
+
+<p>Service vehicles e.g. police cars/ ambulances/ Busses/ Coaches/ Trucks/ Diggers/ Taxis</p>
+
+</div>
+
+<div class="infoimages">
+
+<h1>Rules and advice for using this app</h1>
+<h2>Stay Safe</h2>
+
+<image src="/images/crossroad.jpg" alt="Crossing the road"></image>
+
+<p>Be careful when crossing the road and be aware of your surroundings to avoid trips. Wear appropriate clothing for and stay in places that you know are safe. If you are a going somewhere unfamiliar bring a friend or tell someone where you are going and when you will return.</p>
+
+</div>
 
 
-<h2>Rules and advice for using this app</h2>
+<div class="infoimages">
+<h2>Respect others</h2>
 
-<ul>
- <li>Stay safe.  Stay on the pavement away from moving vehicles, and don't go to places that you don't know.</li>
- <li>Respect others.  If somebody also you not to enter their number plate, respect their wishes. Don't trespass on private property</li>
-</ul>
+<image src="/images/talk.jpg" alt="Crossing the road"></image>
+<p>Don't trespass on private property. We are only interested in vehicles visible from the public street.</p>
 
-<h2>How do you use the data collected.</h2>
 
-<p>We will match the number plate to known characteristics of the vehicle (e.g. make/model/engine size/emissions/age).  We do NOT match the vehicle to any personal information about the owner or driver.</p>
- 
-<p>We use the GPS location of your phone at the time the number plate is observed to identify which neighbourhood the vehicle is parked in.
-We can then use the data to produce aggregated statistics such as the average vehicle age or mileage in different neighbourhoods.  The individual observations will not be published and will be deleted at the end of the research project.</p>
+<p>If somebody asks you not to survey their vehicle or street respect their wishes and leave the area.</p>
 
+</div>
+
+<h1>How do you use the data collected.</h1>
+
+<p>We will match the number plate to known characteristics of the vehicle (e.g. make/model/engine size/emissions/age). We do NOT match the vehicle to any personal information about the owner or driver. We do not gather any personal information on the participants of the survey. </p>
+
+<p>We use the GPS location of your phone at the time the number plate is observed to identify which neighbourhood the vehicle is parked in. We can then use the data to produce aggregated statistics such as the average vehicle age or mileage in different neighbourhoods.</p> 
+<p>Data will be securely stored at the University of Leeds and only anonymised data will be published via the UK Data Service.</p> 
 
 <h2>Attribution</h2>
 <p><a href="https://loading.io/license">icon 'ninja' from loading.io</a></p>
