--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
 <div class="content">
   
   
-<h1>The Big Car Count? <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
 
 <p>This app is part of the <a href="https://environment.leeds.ac.uk/dir-record/research-projects/1794/cars-connecting-administrative-vehicle-data-for-research-on-sustainable-transport">Connecting Administrative vehicle data for Research on Sustainable Transport</a> (CARS) research project.</p>
 <p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.  While we know much about vehicles in the UK a crucial missing piece of information is where the "live". </p>
@@ -37,7 +37,11 @@
 <h2>How to use this app</h2>
 <p>You will need to give the app permission to access your location. If the app does no know your location you will see a “please share your location” button at the bottom of the survey.</p>
 <p>Type in the number plate of any parked vehicles you see and click the button that best describes where it is parked (e.g. Drive, Road, Pavement). If your observation has been successfully summited, a green tick will flash up on the right side of the yellow number plate box.</p>
-
+<h2>App Icons</h2>
+<p>These icons will appear in the yellow number plate box.</p>
+<p><image src="/images/tick.png" style="height:30px; width:30px;" alt="Success"></image><b>Observation Submitted</b>: This will appear each time you record an observation</p>
+<p><image src="/images/spinner.svg" style="height:30px; width:30px;" alt="Loading"></image><b>Syncing</b>: While this icon shows the app is uploading data to the server, please keep the page open until uploading is complete.</p>
+<p><image src="/images/nointernet.PNG" style="height:30px; width:30px;" alt="No internet"></image><b>No internet</b>: Your device does not have an internet connection, you can keep making observations, they will upload as soon as your device reconnects.</p>
 
 
 <h1>What are we looking for</h1>
@@ -45,8 +49,8 @@
 
 <image src="/images/parkedcars.jpg"  alt="Parked Cars"></image>
 
-<p>We are looking for cars/ motorbikes/ vans parked in their "home" locations, the place they go to at night.</p>
-<p>You can contribute in any place or time across the UK. For example Saturday or Sunday afternoon on residential street would be a good time to spot cars in their home locations.</p>
+<p>We are looking for cars, vans, and motorbikes parked in their "home" locations, the place they go to at night.</p>
+<p>You can contribute in any place or time across the UK. But please consider how likely it is that each vehicle is at home. For example a weekend afternoon on residential street would be a good time to spot vehicles in their home locations. While lunchtime in a mulit-storey car park would be a bad place and time to spot vehicles in their home location.</p>
     
     
 </div>
@@ -73,7 +77,7 @@
 
 <image src="/images/servicevehicles.jpg" alt="Service vehicles"></image>
 
-<p>Service vehicles e.g. police cars/ ambulances/ Busses/ Coaches/ Trucks/ Diggers/ Taxis</p>
+<p>Service vehicles e.g. police cars, ambulances, busses, coaches, lorries, diggers, taxis</p>
 
 </div>
 
@@ -84,7 +88,7 @@
 
 <image src="/images/crossroad.jpg" alt="Crossing the road"></image>
 
-<p>Be careful when crossing the road and be aware of your surroundings to avoid trips. Wear appropriate clothing for and stay in places that you know are safe. If you are a going somewhere unfamiliar bring a friend or tell someone where you are going and when you will return.</p>
+<p>Be careful when crossing the road and be aware of your surroundings to avoid trips. Wear appropriate clothing for the weather and stay in places that you know are safe. If you are a going somewhere unfamiliar bring a friend or tell someone where you are going and when you will return.</p>
 
 </div>
 
@@ -101,9 +105,10 @@
 
 <h1>How do you use the data collected.</h1>
 
-<p>We will match the number plate to known characteristics of the vehicle (e.g. make/model/engine size/emissions/age). We do NOT match the vehicle to any personal information about the owner or driver. We do not gather any personal information on the participants of the survey. </p>
+<p>We will match the number plates you provide to publically available data about the vehicle (e.g. make, model, engine size, emissions, age). We do NOT match the vehicle to any personal information about the owner or driver. We do NOT gather any personal information on the participants of the survey. </p>
 
-<p>We use the GPS location of your phone at the time the number plate is observed to identify which neighbourhood the vehicle is parked in. We can then use the data to produce aggregated statistics such as the average vehicle age or mileage in different neighbourhoods.</p> 
+<p>We use the GPS location of your phone at the time the number plate is observed to identify which neighbourhood the vehicle is parked in. We can then use the data to produce aggregated statistics such as the average vehicle age or mileage in different neighbourhoods.</p>
+<p>Knowing how the types of vehicles and parking vary across the country allows researchers to answer many questions about transport. For example what is the relationship between public transport and car use? What kinds of places are adopting electric vehicles? Or where is pavement parking causing the most problems for pedestrians.</p>
 <p>Data will be securely stored at the University of Leeds and only anonymised data will be published via the UK Data Service.</p> 
 
 <h2>Attribution</h2>
