--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div class="overflowbox">
 <div class="mapbox">
 <div class="inst">
-<p>By participating in this survey you consent to the</p>
-<p><a href="/about/consent">terms and conditions</a></p>
-<p><b>Current Location</b></p>
+<p><b>A crowd sourced survey of UK registered vehicles parked in their home location</b></p>
+<p>By participating you consent to the <a href="/about/consent">terms and conditions</a></p>
+<p><b>Current Location</b>:</p>
 <p id="location"><button onclick="updateCoords()" style="height: 40px"> Please share your location</button></p>
 </div>
 </div>
@@ -79,7 +79,7 @@
 
 <!-- Floading Content -->
 <div class="success" id="success">
-  <image src="/images/tick.png" style="height:50px; width:50px;" alt="Sucesffully loaded"></image>
+  <image src="/images/tick.png" style="height:50px; width:50px;" alt="Success"></image>
 </div>
 
 <div class="loading" id="loading">
@@ -87,7 +87,7 @@
 </div>
 
 <div class="nointernet" id="nointernet">
-  <image src="/images/nointernet.PNG" style="height:40px; width:40px;" alt="Submitting"></image>
+  <image src="/images/nointernet.PNG" style="height:40px; width:40px;" alt="No internet"></image>
 </div>
 
 <div class="invalidplate" id="invalidplate">
