Consent and registration

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="A survey of the vehicles of the UK">
   
-  <title>The Big Car Count</title>
+  <title>About | The Big Car Count</title>
   <!-- PWA support -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
@@ -26,7 +26,7 @@
 <div class="content">
   
   
-<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>About the Big Car Count<image src="/images/icon_40.jpg" style="height:30px; width:30px;" alt="logo"></image></h1>
 
 <p>This app is part of the <a href="https://environment.leeds.ac.uk/dir-record/research-projects/1794/cars-connecting-administrative-vehicle-data-for-research-on-sustainable-transport">Connecting Administrative vehicle data for Research on Sustainable Transport</a> (CARS) research project.</p>
 <p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.  While we know much about vehicles in the UK a crucial missing piece of information is where the "live". </p>
@@ -81,11 +81,11 @@
 
 </div>
 
-<div class="infoimages">
+
 
 <h1>Rules and advice for using this app</h1>
 <h2>Stay Safe</h2>
-
+<div class="infoimages">
 <image src="/images/crossroad.jpg" alt="Crossing the road"></image>
 
 <p>Be careful when crossing the road and be aware of your surroundings to avoid trips. Wear appropriate clothing for the weather and stay in places that you know are safe. If you are a going somewhere unfamiliar bring a friend or tell someone where you are going and when you will return.</p>
@@ -95,8 +95,8 @@
 
 
 <h2>Respect others</h2>
-
 <div class="infoimages">
+
 <image src="/images/talk.jpg" alt="Crossing the road"></image>
 <p>Don't trespass on private property. We are only interested in vehicles visible from the public street.</p>
 <p>If somebody asks you not to survey their vehicle or street respect their wishes and leave the area.</p>
