--- a/about/register/index.html
+++ b/about/register/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="A survey of the vehicles of the UK">
   
-  <title>Register</title>
+  <title>Register | The Big Car Count</title>
   <!-- PWA support -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
@@ -28,7 +28,7 @@
 <div class="content">
   
   
-<h1>Register your device <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>Register your device <image src="/images/icon_40.jpg" style="height:30px; width:30px;" alt="logo"></image></h1>
 
 <p>By default, your submissions to the Big Car Count are anonymous. However, if you would like to participate in the prize draw you need to register your device with an email address. Your email will be held securely by the University of Leeds and will only be used for the Big Car Count. We will not share your email with any third parties. Once the prize draw has been completed (31st December 2024) we will delete your email address.</p>
 
