--- a/about/consent/index.html
+++ b/about/consent/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="A survey of the vehicles of the UK">
   
-  <title>The Big Car Count</title>
+  <title>Consent | The Big Car Count</title>
   <!-- PWA support -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
