--- a/stats/index.html
+++ b/stats/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="A survey of the vehicles of the UK">
   
-  <title>The Big Car Count</title>
+  <title>Stats| The Big Car Count</title>
   <!-- PWA support -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/images/icon_192.png">
@@ -27,7 +27,9 @@
   
 <div style="height:calc(100% - 50px); overflow:auto">
 
-<h1>The Big Car Count <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+<h1>Stats <image src="/images/icon_40.jpg" style="height:40px; width:40px;" alt="logo"></image></h1>
+
+<p><b>Your observations</b></p>
 
 <p>Number of observations submitted:</p><div id="count">0</div>
 <div id="stars" style="height: 40px"></div>
@@ -37,7 +39,24 @@
     <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<p>App Version 0.010</p>
+<p><b>Registration</b></p>
+<p>To particpiate in the prize draw you need to register your device.</p>
+<div id="registered">
+<p><b>Your device is not registered. <a href="/about/register/">Click here</a> to register.</b></p>
+</div>
+
+<p><b>Prize Draw</b></p>
+<p>The prize draw will be conducted on the 31st December 2024. Only registered contributors will be eligible for the prize draw, as we cannot contact unregistered users. The prize draw will operate like a raffle, with each validated observation constituting one entry to the raffle. Note that the count of observations shown above is of unvalidated observations, so your number of validated observations may be lower. </p>
+<p>After you submit an observation, we validate it by checking that:</p>
+<ol>
+  <li>The number plate belongs to a real vehicle.</li>
+  <li>The observation is unique. (i.e. If you enter the same number plate multiple times, it only counts once for the raffle). </li>
+  <li>Additonal checks to detact erroneous or malicious contributions e.g. spam, bots, etc.</li>
+</ol>
+<p>We reserve the right to exclude any observations or users if we suspect they are erroneous or malicious.</p>
+
+
+<p>App Version 0.1.1</p>
 
 </div>
 
