--- a/about/register/index.html
+++ b/about/register/index.html
@@ -43,7 +43,7 @@
     <input type="text" id="email2" name="email2"><br><br>
   </form> 
   
-  <button onclick="registerDevice()">Submit</button>
+  <button id="registerbutton" onclick="registerDevice()" style="width:100%; height:40px">Submit</button>
   
   
 </div>
